Fix small screen masthead alignment

--- a/_sass/components/_container.scss
+++ b/_sass/components/_container.scss
@@ -322,6 +322,7 @@
 
 	@media only screen and (max-width: 680px) {
 		padding: 0 6vw;
+
 	}
 
 	div {
@@ -352,7 +353,8 @@
 
 	@media only screen and (max-width: 700px) {
 		display: block;
-		margin-bottom: $spacing-base;
+		// margin-bottom: $spacing-base;
+		line-height: 0;
 
 		img {}
 
